redis/versions/3.7.0/README.md
## Redis Sentinel

> **Upgrading from 3.5.1:** resource blocks that expose both a floor and a ceiling now name the
> ceiling `maxCpu`/`maxMemory` instead of `cpu`/`memory`, so it is no longer ambiguous which number
> is the limit. Rename those two keys in your values; an upgrade that still carries the old names is
> refused at render. Blocks that expose only a limit keep the bare `cpu`/`memory` names.


Creates a Redis Sentinel cluster on Control Plane with automatic leader election, failover, and an optional backup configuration.

### Architecture

- **Stateful Redis workload** — one primary plus replicas, each on its own volume set.
- **Stateful Sentinel workload** — monitors the primary and promotes a replica on failure; clients discover the current primary through it.
- **Secrets** — Redis and Sentinel configuration, plus password secrets created only when auth is enabled.
- **Identities and policies** — separate identities for Redis, Sentinel and the backup job, each granted `reveal` on only the secrets it needs.
- **Domains** *(optional)* — created when public access is enabled, for external TCP reach.
- **Volume sets** — persistence for Redis and Sentinel.
- **Backup cron workload** *(optional)* — a scheduled backup to S3 or GCS.
- **Grafana dashboard** — shipped with the template.

This template does not create a GVC.

### Important Notes

- **Do not rotate the Redis password in place.** Changing `redis.auth.password.value` on a running cluster deadlocks the rollout: the first restarted node cannot replicate from the not-yet-restarted master (`Unable to AUTH to MASTER: -WRONGPASS`), so its readiness probe never passes and the roll never advances. Re-applying the previous password recovers it. To change the password, uninstall and reinstall, or accept a brief planned outage.
- **Turn `persistence` on at install, not on a running release.** Enabling it on a deployment that is already running stalls the rollout indefinitely: every replica sits on `Replica N will be restarted shortly (version transition: N -> N+1)`, the volume set's volumes stay `unbound`, and `/data` remains on the container overlay. Measured at 27 minutes with no progress, and a forced redeployment does not clear it. A **fresh** install with persistence enabled comes up normally (53 s), and upgrading a release that already has its volume rolls fine — so the constraint is specifically about adding the volume to a live release. This is independent of `engine`.
- **The engine is chosen at install time and cannot be switched on a running deployment.** With persistence on, pointing an existing Redis data directory at Valkey crash-loops the pod (`# Can't handle RDB format version 15` / `Error reading the RDB base file …, AOF loading aborted`); with persistence off it silently starts empty. Migrate with dump/restore or replication, not by flipping `engine`.
- **Switching `backup.provider` between `aws` and `gcp` leaves the previous provider's cloud binding on the workload identity.** The rendered manifest is correct, but the platform deep-merges identity updates, so the old block persists until you edit the identity or reinstall the release. Verify the identity after a provider switch if least privilege matters to you.

### Upgrading from a 3.4.x release (Redis 7.4 → 8)

This version moves the default image to `redis:8`. Redis 8 reads 7.4 data directly, so an upgrade with persistence enabled keeps your data — but **the upgrade is one-way**: once a node has written its data file under Redis 8, a 7.4 image can no longer load it. If you need a rollback path, snapshot the volume set before upgrading, or pin `redis.image`/`sentinel.image` back to `redis:7.4` (both remain supported values).

### Engine: Redis or Valkey

This template runs either server. `engine: redis` is the default and changes nothing.

- **Valkey** is the BSD-3-Clause fork of Redis 7.2, stewarded by the Linux Foundation. There is no paid edition, so nothing — replication, Sentinel, failover — is feature-gated.
- **Both tiers move together.** `engine: valkey` puts the Redis *and* Sentinel workloads on `valkeyImage`; `redis.image` and `sentinel.image` are then ignored. A Redis-Sentinel/Valkey-server hybrid is untested and cannot be produced with this knob.
- **Nothing else in the chart changes.** The Valkey image ships `redis-server`, `redis-cli` and `redis-sentinel` compatibility symlinks, so every command, config directive and health probe here is identical on both engines. `redis.serverCommand` stays `redis-server` on both.
- **Only the Debian-based Valkey tags are supported.** The `-alpine` tags have no bash, and this chart's readiness and liveness probes are bash scripts.
- **`INFO` reports `redis_version:7.2.4` on Valkey** for client compatibility. To see what is actually running, read `server_name` and `valkey_version`. The marketplace card still shows the Redis `appVersion` — a chart's appVersion is a constant and cannot follow a values knob.
- **Do not set `dual-channel-replication-enabled yes` via `extraArgs` on Valkey** — a [known upstream defect](https://github.com/valkey-io/valkey/issues/2338) makes Sentinel see duplicate replicas.

### Configuration

**Engine** — which server both tiers run:
```yaml
engine: redis                     # redis | valkey
# Used for BOTH tiers when engine is valkey; redis.image / sentinel.image are
# then ignored. Only the Debian-based tags are supported.
valkeyImage: valkey/valkey:8.1.9
```

**Redis and Sentinel** — set replicas, resources, and timeouts for each. Sentinel replicas must be an odd number for quorum:
```yaml
redis:
  replicas: 3
  resources:
    minCpu: 80m
    minMemory: 128Mi
    maxCpu: 200m
    maxMemory: 256Mi

sentinel:
  replicas: 3
  quorumAutoCalculation: true  # calculates as (replicas/2)+1
```

**Authentication** — enable one method. Apply the same config under both `redis.auth` and `sentinel.auth`:
```yaml
redis:
  auth:
    password:
      enabled: true
      value: change-me-redis-password
    # fromSecret:
    #   enabled: true
    #   name: my-redis-secret
    #   passwordKey: password
```

**Persistence** — disabled by default. Enable to attach a persistent volume to Redis:
```yaml
redis:
  persistence:
    enabled: true
    volumes:
      data:
        initialCapacity: 10
        performanceClass: general-purpose-ssd  # or high-throughput-ssd (min 1000 GiB)
        fileSystemType: ext4
```

When persistence is enabled, lifecycle hooks are automatically added to clean up orphaned temp RDB and AOF rewrite files on every container start and stop. These files are left behind when a pod is terminated mid-sync and can fill the volume over time if not removed.

**Probe tuning for large datasets** — the startup probe window is derived from the readiness probe:
```
startup window = initialDelaySeconds + (30 × periodSeconds)
```
The default (`10 + 30×5 = 160s`) is sufficient for small datasets. With persistence enabled and a large dataset, replicas must load their local AOF before syncing — which can take 60–120s or more — leaving little time for the actual RDB transfer. Increase `periodSeconds` to extend the window:
```yaml
redis:
  probes:
    readiness:
      initialDelaySeconds: 35  # clears the AOF load window
      periodSeconds: 20         # startup window = 35 + (30×20) = 635s (~10 min)
```

**Metrics exporter** — disabled by default. When enabled, a `redis_exporter` sidecar is added to each Redis pod. Control Plane scrapes `:9121/metrics` automatically every 30 seconds and makes the metrics available in the console:
```yaml
redis:
  exporter:
    enabled: true
```
Use `dropMetrics` to filter high-cardinality series before they are stored (regex patterns matched against metric names):
```yaml
redis:
  exporter:
    dropMetrics:
      - "redis_commands_latencies_usec_bucket"
      - "redis_latency_percentiles_usec"
```

**Grafana Dashboard** — opt-in, k8s clusters only. When enabled, a `GrafanaDashboard` CRD is provisioned via the [Grafana Operator](https://grafana.github.io/grafana-operator/) and automatically appears in your Grafana instance:

```yaml
grafana:
  dashboard:
    enabled: true
  folder: Redis                 # Grafana folder the dashboard is placed in
  datasource: metrics           # name of the Prometheus datasource in your Grafana instance
  instanceSelector:
    matchLabels:
      dashboards: grafana       # must match the label on your Grafana CR
```

On Control Plane's managed platform where no Grafana Operator is present, leave this disabled — the `GrafanaDashboard` CRD will have nothing to reconcile it.

**Prerequisites:**

1. **Grafana Operator installed** in your Kubernetes cluster. The operator must be configured with your Grafana instance URL and a Grafana service account API token (not a Control Plane token):

```bash
kubectl create secret generic grafana-admin-credentials \
  --from-literal=GF_SECURITY_ADMIN_USER=admin \
  --from-literal=GF_SECURITY_ADMIN_PASSWORD=<grafana-api-token> \
  -n grafana-operator
```

2. **A Grafana CR** with a label matching `grafana.instanceSelector.matchLabels`. For example:
```yaml
apiVersion: grafana.integreatly.org/v1beta1
kind: Grafana
metadata:
  name: grafana
  labels:
    dashboards: grafana
spec:
  external:
    url: https://your-org.grafana.cpln.io
    adminPassword:
      name: grafana-admin-credentials
      key: GF_SECURITY_ADMIN_PASSWORD
```

**Included panels:**
- CPU Usage (`cpu_used`) — always included
- Memory Usage (`mem_used`) — always included
- Connected Clients, Redis Memory, Commands/sec, Cache Hit Rate — included when `redis.exporter.enabled: true`

The dashboard includes template variables for datasource, GVC, workload, and replica so you can filter by deployment without editing the dashboard.

**Firewall** — set the internal access scope for each tier:
```yaml
redis:
  firewall:
    internal_inboundAllowType: same-gvc  # same-gvc, same-org, or workload-list

sentinel:
  firewall:
    internal_inboundAllowType: same-gvc
```

### Public Access (External TCP)

Redis and Sentinel can be exposed over the internet via TCP using Control Plane's domain resource with per-replica port routing.

#### Prerequisites

1. **A domain you control** with DNS managed by your registrar (e.g. Cloudflare)
2. **Dedicated Load Balancer** enabled on your GVC — required for arbitrary TCP port routing. Enable this under your GVC settings in the Control Plane console.
3. **DNS records added before deploying** — Control Plane will reject the domain resource on first deploy if ownership has not been proven. Add the following records in your DNS provider for each address before running the deployment. **Disable proxying** (e.g. Cloudflare's orange cloud) — TCP traffic must pass through directly:

| Type | Name | Value |
|------|------|-------|
| TXT | `_cpln-<subdomain>` | your Control Plane org name or org ID (either is accepted) |
| CNAME | `<subdomain>` | `<gvc-alias>.cpln.app` |

Your GVC alias is visible in the Control Plane console under GVC settings. The TXT record proves domain ownership — without it, the first deploy will fail with an `Unable to apply domain` error.

#### Configuration

Enable `publicAccess` for Redis and/or Sentinel and set a subdomain you own:

```yaml
redis:
  publicAccess:
    enabled: true
    address: redis.your-domain.com
  firewall:
    internal_inboundAllowType: same-gvc
    external_inboundAllowCIDR: "0.0.0.0/0"  # or restrict to specific CIDRs

sentinel:
  publicAccess:
    enabled: true
    address: redis-sentinel.your-domain.com
  firewall:
    internal_inboundAllowType: same-gvc
    external_inboundAllowCIDR: "0.0.0.0/0"
```

When enabled, a Control Plane `domain` resource is created for each address. Port mapping is one port per replica:
- **Redis**: ports `6380`, `6381`, ... (replica 0, 1, ...)
- **Sentinel**: ports `26380`, `26381`, `26382`, ... (replica 0, 1, 2, ...)

After DNS propagates, the domain status in Control Plane will show **Ready**. You can verify the full DNS chain resolves correctly with:

```bash
dig <subdomain>.your-domain.com CNAME   # should return <gvc-alias>.cpln.app
dig <gvc-alias>.cpln.app               # should return an IP address
```

#### Connecting Externally (Public Access Enabled)

```bash
# add -a <password> if auth is enabled

# Redis replica 0
redis-cli -h redis.your-domain.com -p 6380 ping

# Redis replica 1
redis-cli -h redis.your-domain.com -p 6381 ping

# Sentinel replica 0
redis-cli -h redis-sentinel.your-domain.com -p 26380 ping
```

### Connecting

Redis is accessible internally on port 6379:
```
RELEASE_NAME-redis.GVC_NAME.cpln.local:6379
```

Sentinel is accessible on port 26379:
```
RELEASE_NAME-sentinel.GVC_NAME.cpln.local:26379
```

To route writes to the current master:
```bash
MASTER_INFO=$(redis-cli -h RELEASE_NAME-sentinel.GVC_NAME.cpln.local -p 26379 SENTINEL get-master-addr-by-name mymaster)
MASTER_HOST=$(echo $MASTER_INFO | cut -d' ' -f1)
MASTER_PORT=$(echo $MASTER_INFO | cut -d' ' -f2)
redis-cli -h $MASTER_HOST -p $MASTER_PORT SET my-key "value"
```

### Backing Up

Set `backup.enabled` to `true`, configure your provider, and set your desired schedule. The backup image is compatible with all Redis versions.

```yaml
backup:
  enabled: true
  schedule: "0 2 * * *"  # daily at 2am UTC
  provider: aws           # Options: aws or gcp
```

#### AWS S3


<b>Upgrading from 3.5.0:</b> this version removes <code>aws::ReadOnlyAccess</code> from the backup identity.
That managed policy granted read access to every bucket in your AWS account and contained no write actions,
so it was never carrying the backup itself — but it <i>was</i> silently supplying any read action your
bucket-scoped policy happened to omit. <b>Update your IAM policy to the full action list in this section before
upgrading</b>; if it already matches, no action is needed. Nothing else changes.


For the backup cron job to access an S3 bucket, complete the following in your AWS account first:

1. Create your bucket. Set `backup.aws.bucket` to its name and `backup.aws.region` to its region.

2. If you do not have a Cloud Account set up, refer to the docs to [Create a Cloud Account](https://docs.controlplane.com/guides/create-cloud-account). Set `backup.aws.cloudAccountName` to its name.

3. Create a new IAM policy with the following JSON (replace `YOUR_BUCKET_NAME`) and set `backup.aws.policyName` to match:

```json
{
    "Version": "2012-10-17",
    "Statement": [
        {
            "Effect": "Allow",
            "Action": [
                "s3:GetObject",
                "s3:PutObject",
                "s3:DeleteObject",
                "s3:ListBucket",
                "s3:GetObjectVersion",
                "s3:DeleteObjectVersion",
                "s3:GetBucketLocation",
                "s3:AbortMultipartUpload",
                "s3:ListBucketMultipartUploads",
                "s3:ListMultipartUploadParts"
            ],
            "Resource": [
                "arn:aws:s3:::YOUR_BUCKET_NAME",
                "arn:aws:s3:::YOUR_BUCKET_NAME/*"
            ]
        }
    ]
}
```

#### GCS

For the backup cron job to access a GCS bucket, complete the following in your GCP account first:

1. Create your bucket. Set `backup.gcp.bucket` to its name.

2. If you do not have a Cloud Account set up, refer to the docs to [Create a Cloud Account](https://docs.controlplane.com/guides/create-cloud-account). Set `backup.gcp.cloudAccountName` to its name.

**Important**: You must add the `Storage Admin` role when creating your GCP service account.

### Restoring a Backup

Run the following command from a client with access to the bucket (replace `aws s3 cp` with `gsutil cp` for GCS):

```sh
aws s3 cp s3://BUCKET_NAME/PREFIX/BACKUP_FILE.rdb /tmp/dump.rdb
redis-cli \
  -h RELEASE_NAME-redis.GVC_NAME.cpln.local \
  -p 6379 \
  --rdb /tmp/dump.rdb
```

### Supported External Services
- [Redis Documentation](https://redis.io/docs/)
- [Redis Sentinel Documentation](https://redis.io/docs/latest/operate/oss_and_stack/management/sentinel/)
- [Valkey Documentation](https://valkey.io/topics/)
- [Valkey Sentinel](https://valkey.io/topics/sentinel/)
- [Migrating between Redis and Valkey](https://valkey.io/topics/migration/)

### Release Notes
See [RELEASES.md](https://github.com/controlplane-com/templates/blob/main/redis/RELEASES.md)
